Revert "Temp commit"
This reverts commit ff202089f1ceb1a28c83dd179bef26cbbdf67fd3.

--- a/src/main/FunScript/FunScript.fsproj
+++ b/src/main/FunScript/FunScript.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="AST.fs" />
     <Compile Include="QuoteExtensions.fs" />
     <Compile Include="InternalCompiler.fs" />
+    <Compile Include="ReturnStrategies.fs" />
     <Compile Include="CompilerComponent.fs" />
     <Compile Include="ExpressionReplacer.fs" />
     <Compile Include="Reflection.fs" />
