First commit with Compiler Services

--- a/src/providers/FunScript.RequireProvider.fsproj
+++ b/src/providers/FunScript.RequireProvider.fsproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
-    <OutputPath>..\..\..\build\providers\bin</OutputPath>
+    <OutputPath>../../build/providers/bin</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Debug\FunScript.RequireProvider.XML</DocumentationFile>
@@ -27,7 +27,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <Tailcalls>true</Tailcalls>
-    <OutputPath>..\..\build\providers\bin</OutputPath>
+    <OutputPath>../../build/providers/bin</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <DocumentationFile>bin\Release\FunScript.RequireProvider.XML</DocumentationFile>
