--- a/src/main/FunScript.fsproj
+++ b/src/main/FunScript.fsproj
@@ -84,8 +84,14 @@
     <Compile Include="Conversions.fs" />
     <Compile Include="Constructors.fs" />
     <Compile Include="Compiler.fs" />
+    <Content Include="packages.config" />
+    <Content Include="app.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="FSharp.Compiler.Service">
+      <HintPath>..\packages\FSharp.Compiler.Service.0.0.89\lib\net45\FSharp.Compiler.Service.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
@@ -93,8 +99,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="Interop\FunScript.Interop.fsproj">
       <Name>FunScript.Interop</Name>
       <Project>{1e75b2c5-6139-4f9e-a2ea-858ba66f99ca}</Project>
