--- a/src/FunScript/FunScript.fsproj
+++ b/src/FunScript/FunScript.fsproj
@@ -50,13 +50,14 @@
     <Compile Include="Expressions\Helpers.fs" />
     <Compile Include="Expressions\JSMapper.fs" />
     <Compile Include="Expressions\AST.fs" />
-    <Compile Include="Expressions\Applications.fs" />
     <Compile Include="Expressions\Comparisons.fs" />
     <Compile Include="Expressions\ControlFlow.fs" />
     <Compile Include="Expressions\Conversions.fs" />
     <Compile Include="Expressions\GetSet.fs" />
     <Compile Include="Expressions\LetBindings.fs" />
     <Compile Include="Expressions\PrimitiveTypes.fs" />
+    <Compile Include="Expressions\SynExpr.fs" />
+    <Compile Include="Expressions\Applications.fs" />
     <Compile Include="Library.fs" />
     <None Include="paket.references" />
     <None Include="paket.template" />
