--- a/src/FunScript/FunScript.fsproj
+++ b/src/FunScript/FunScript.fsproj
@@ -56,7 +56,9 @@
     <Compile Include="Expressions\GetSet.fs" />
     <Compile Include="Expressions\LetBindings.fs" />
     <Compile Include="Expressions\PrimitiveTypes.fs" />
+    <Compile Include="Expressions\DerivedPatterns.fs" />
     <Compile Include="Expressions\ComputationExpressions.fs" />
+    <Compile Include="Expressions\Calls.fs" />
     <Compile Include="Expressions\SynExpr.fs" />
     <Compile Include="Expressions\Applications.fs" />
     <Compile Include="Library.fs" />
