--- a/src/FunScript/FunScript.fsproj
+++ b/src/FunScript/FunScript.fsproj
@@ -46,7 +46,6 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes.fs" />
     <Compile Include="Expressions\Helpers.fs" />
     <Compile Include="Expressions\JSMapper.fs" />
     <Compile Include="Expressions\AST.fs" />
@@ -61,6 +60,7 @@
     <Compile Include="Expressions\Calls.fs" />
     <Compile Include="Expressions\SynExpr.fs" />
     <Compile Include="Expressions\Applications.fs" />
+    <Compile Include="Expressions\Playbox.fs" />
     <Compile Include="Library.fs" />
     <None Include="paket.references" />
     <None Include="paket.template" />
@@ -68,6 +68,7 @@
     <None Include="Scripts\load-references.fsx" />
     <None Include="Scripts\load-project.fsx" />
     <None Include="Scripts\Script.fsx" />
+    <Compile Include="Attributes.fs" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
